force-app/main/default/objects/LLC_BI__Budget__c/fields/LLC_BI__Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Description__c</fullName>
    <description>A note about the budget.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>