force-app/main/default/objects/LLC_BI__Budget__c/fields/LLC_BI__Is_Initially_Editable__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Initially_Editable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables initial edit mode for newly created budgets.</description>
    <label>Is Initially Editable</label>
    <type>Checkbox</type>
</CustomField>