force-app/main/default/objects/LLC_BI__Budget__c/fields/LLC_BI__Is_Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to identify budget templates.</description>
    <label>Is Template</label>
    <type>Checkbox</type>
</CustomField>