force-app/main/default/objects/LLC_BI__Budget__c/fields/LLC_BI__Percent_Allocated__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Percent_Allocated__c</fullName>
    <description>The total percentage of the budget that has been allocated.</description>
    <formula>LLC_BI__Total_Allocated__c  /  LLC_BI__Total_Budget_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Allocated</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>