force-app/main/default/objects/LLC_BI__Budget__c/fields/LLC_BI__Percent_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Percent_Disbursed__c</fullName>
    <description>The percentage of the total budget amount that has been disbursed.</description>
    <formula>LLC_BI__Total_Disbursed_Amount__c  /  LLC_BI__Total_Budget_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Disbursed</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>