force-app/main/default/objects/LLC_BI__Budget__c/fields/LLC_BI__Percent_Remaining_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Percent_Remaining_Disbursement__c</fullName>
    <description>Percentage of the total budget amount that is available to disburse.</description>
    <formula>LLC_BI__Remaining_Disbursement__c  /  LLC_BI__Total_Budget_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Remaining Disbursement</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>