force-app/main/default/objects/LLC_BI__Budget__c/fields/LLC_BI__Remaining_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Remaining_Disbursement__c</fullName>
    <description>The remaining amount that can be disbursed.</description>
    <formula>LLC_BI__Total_Budget_Amount__c  -  LLC_BI__Total_Disbursed_Amount__c - LLC_BI__Pending_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Disbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>