force-app/main/default/objects/LLC_BI__Budget__c/fields/LLC_BI__Total_Allocated__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Allocated__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>The total allocated is the sum of all line item amounts for the budget.</description>
    <label>Total Allocated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>