force-app/main/default/objects/LLC_BI__Budget__c/fields/LLC_BI__Total_Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Budget_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>The total amount for the overall budget.</description>
    <label>Total Budget Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>