force-app/main/default/objects/LLC_BI__Budget__c/listViews/LLC_BI__All.listView-meta.xml
<ListView>
    <fullName>LLC_BI__All</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__Is_Template__c</columns>
    <columns>LLC_BI__Description__c</columns>
    <columns>LLC_BI__Total_Budget_Amount__c</columns>
    <columns>LLC_BI__lookupKey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>